--- a/PVB Stage Applicatie/Views/Periode/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 @section zijMenu{
-    <li>@Html.ActionLink("Periode toevoegen", "Create")</li>
+    @if (User.IsInRole("Beheerder")) { 
+    <li>@Html.ActionLink("Periode toevoegen", "Create")</li>}
+                                                            
 }
 <h2>Index</h2>
 <p>@Html.Encode(ViewData["KanAanpassen"])</p>
