--- a/PVB Stage Applicatie/Views/Begeleider/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Index.cshtml
@@ -26,7 +26,7 @@
                         @Html.DisplayNameFor(model => model.Actief)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
+                        Bedrijf
                     </th>
                     <th></th>
                 </tr>
