Minor fixes. Ik typte monir fixes, dat deed mij denken aan Djano Reindhardt ,met Manoir de Mes Reves. https://www.youtube.com/watch?v=g8mOH5xchIU Landschap van dromen volgens mij.
Presoonlijk vind ik dit een erg mooi nummer, tevens doet het mij denken aan een van mijn eerste games: Mafia. Nostalgie.

--- a/PVB Stage Applicatie/Views/Formulier/StudentIndex.cshtml
+++ b/PVB Stage Applicatie/Views/Formulier/StudentIndex.cshtml
@@ -6,7 +6,7 @@
     var beeindigd = !(Model.TussentijdseBeindeging.Count == 0 && Model.Beoordeling.Where(e => e.EindBeoordeling == true).FirstOrDefault() == null);
 }
 
-<h2>Beoordelingen van @Model.Persoonsgegevens.Voornaam</h2>
+<h2>Beoordelingen van @Model.Persoonsgegevens.Voornaam tijdens @Html.DisplayFor(model => model.Periode.Begindatum) - @Html.DisplayFor(model => model.Periode.Einddatum)</h2>
 @section zijMenu{
     @if (User.IsInRole("Docent"))
     {
