Handtekening in het midden

--- a/PVB Stage Applicatie/Views/Beoordeling/CreateFormulier.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/CreateFormulier.cshtml
@@ -425,7 +425,7 @@
                 </table>
 
                 <br />
-                <table class="table table-bordered">
+                <table  class="table table-bordered">
                     <tr>
                         <th align="center" valign="middle">Handtekening Docent</th>
                         <th align="center" valign="middle">Handtekening Begeleider</th>
@@ -436,9 +436,9 @@
                         @Html.HiddenFor(m => m.HandtekeningBegeleider)
                         @Html.HiddenFor(m => m.HandtekeningStudent)
 
-                        <td><canvas id="d" width="200" height="100" class="cvs"></canvas> </td>
-                        <td><canvas id="b" width="200" height="100" class="cvs"></canvas> </td>
-                        <td><canvas id="s" width="200" height="100" class="cvs"></canvas> </td>
+                        <td align="center"><canvas id="d" width="200" height="100" class="cvs"></canvas> </td>
+                        <td align="center"><canvas id="b" width="200" height="100" class="cvs"></canvas> </td>
+                        <td align="center"><canvas id="s" width="200" height="100" class="cvs"></canvas> </td>
                     </tr>
                     <tr>
                         <td align="center" valign="middle"><input class="clsbtn" value="Clear" type="button" onclick="ClearCanvas('d')" /></td>
