--- a/PVB Stage Applicatie/Views/GespreksFormulier/CreateGespreksFormulier.cshtml
+++ b/PVB Stage Applicatie/Views/GespreksFormulier/CreateGespreksFormulier.cshtml
@@ -136,9 +136,9 @@
             @Html.HiddenFor(m => m.HandtekeningBegeleider)
             @Html.HiddenFor(m => m.HandtekeningStudent)
 
-            <td><canvas id="d" width="200" height="100" class="cvs"></canvas> </td>
-            <td><canvas id="b" width="200" height="100" class="cvs"></canvas> </td>
-            <td><canvas id="s" width="200" height="100" class="cvs"></canvas> </td>
+            <td align="center"><canvas id="d" width="200" height="100" class="cvs"></canvas> </td>
+            <td align="center"><canvas id="b" width="200" height="100" class="cvs"></canvas> </td>
+            <td align="center"><canvas id="s" width="200" height="100" class="cvs"></canvas> </td>
         </tr>
         <tr class="handtekening">
             <td align="center" valign="middle"><input class="clsbtn" value="Clear" type="button" onclick="ClearCanvas('d')" /></td>
