--- a/PVB Stage Applicatie/Views/Home/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Home/Index.cshtml
@@ -49,6 +49,11 @@
             </td>
             <td align="center">
                 <div class="tile">
+                    <a class="table" href='@Url.Action("index", "Formulier")'><span class="glyphicon glyphicon-list"></span><br /> Mijn formulieren </a>
+                </div>
+            </td>
+            <td align="center">
+                <div class="tile">
                     <a class="table" href='@Url.Action("logUit", "Login")'><span class="glyphicon glyphicon-log-out"></span><br /> Loguit </a>
                 </div>
             </td>
@@ -75,13 +80,13 @@
                     <a class="table" href='@Url.Action("index", "Docent")'><span class="glyphicon glyphicon-user"></span><br /> Docent </a>
                 </div>
             </td>
-        </tr>
-        <tr>
             <td align="center">
                 <div class="tile">
                     <a class="table" href='@Url.Action("index", "Bedrijf")'><span class="glyphicon glyphicon-home"></span><br /> Bedrijf </a>
                 </div>
             </td>
+        </tr>
+        <tr>
             <td align="center">
                 <div class="tile">
                     <a class="table" href='@Url.Action("index", "Periode")'><span class="glyphicon glyphicon-calendar"></span><br /> Periode </a>
@@ -90,13 +95,6 @@
             <td align="center">
                 <div class="tile">
                     <a class="table" href='@Url.Action("index", "Koppeling")'><span class="glyphicon glyphicon-link"></span><br /> Koppeling </a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td align="center">
-                <div class="tile">
-                    <a class="table" href='@Url.Action("index", "Formulier")'><span class="glyphicon glyphicon-list"></span><br /> Formulier </a>
                 </div>
             </td>
             <td align="center">
