--- a/PVB Stage Applicatie/Views/TussentijdseBeeindiging/CreateBeeindeging.cshtml
+++ b/PVB Stage Applicatie/Views/TussentijdseBeeindiging/CreateBeeindeging.cshtml
@@ -4,15 +4,6 @@
 }
 
 <style type="text/css">
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-
-    th, td {
-        padding: 5px;
-    }
-
     cvsmaster {
         -moz-user-select: none;
         -webkit-user-select: none;
@@ -25,6 +16,34 @@
         vertical-align: middle;
     }
 </style>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.validator.methods.date = function (value, element) {
+            return this.optional(element) || parseDate(value, "dd-MM-yyyy") !== null;
+        };
+
+        var nowTemp = new Date();
+        var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
+        
+        $("#dpd1")[0].value = "";
+
+
+        var checkin = $('#dpd1')
+            .datepicker({
+                defaultDate: "+1w",
+                changeMonth: true,
+                numberOfMonths: 1,
+                dateFormat: "dd-mm-yyyy",
+                format: "dd-mm-yyyy",
+            })
+            .on('changeDate', function () {
+                checkin.hide();
+            })
+            .data('datepicker');
+    });
+</script>
+
 @section zijMenu{
 
 
@@ -45,7 +64,7 @@
     
     <h2>CreateBeeindeging</h2>
 
-    <table>
+    <table class="table table-striped">
         <tr>
             <td>
                 Student:
@@ -95,7 +114,7 @@
         <p>
             <h3>Beoogde einddatum</h3>
 
-            @Html.TextBoxFor(model => model.TussentijdseBeeindegingModel.Einddatum, new { @class = "kalender begin", @readonly = "true"  })<span class="glyphicon glyphicon-calendar"></span>
+            @Html.TextBoxFor(model => model.TussentijdseBeeindegingModel.Einddatum, new { @class = "kalender begin", @readonly = "true", id = "dpd1" })<span class="glyphicon glyphicon-calendar"></span>
             @Html.ValidationMessageFor(model => model.TussentijdseBeeindegingModel.Einddatum)
         </p>
         <p>
@@ -156,19 +175,8 @@
             $("#" + group)[0].value = temp.slice(0, -1);
         });
     }
-
-    $("Document").ready(function () {
-        $(".kalender")[0].value = "";
-
-        $(".kalender").datepicker({
-            defaultDate: "+1w",
-            changeMonth: true,
-            numberOfMonths: 1,
-            dateFormat: "mm-dd-yy",
-            onClose: function (selectedDate) {
-                $(".eind").datepicker("option", "minDate", selectedDate);
-            }
-        });
-    });
 </script>
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
