--- a/PVB Stage Applicatie/Views/Formulier/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Formulier/Index.cshtml
@@ -22,7 +22,7 @@
 }
 else
 {
-    <h2> Er zijn nog geen stages aan u toegewezen</h2>
+    <h2> Er zijn nog geen stages aan u toegewezen of er zijn geen lopende stages op dit moment</h2>
 }
 
 
