Moe, godverdomme zeg

--- a/PVB Stage Applicatie/Views/Beoordeling/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/Details.cshtml
@@ -59,7 +59,7 @@
     </thead>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.Beoordeling1)
+            Beoordeling
         </td>
         <td>@Html.RadioButtonFor(model => model.Beoordeling1, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.Beoordeling1, 2, new { disabled = "disabled" })</td>
@@ -70,7 +70,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.VoorbereidWerk)
+            Voorbereidend werk
         </td>
         <td>@Html.RadioButtonFor(model => model.VoorbereidWerk, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.VoorbereidWerk, 2, new { disabled = "disabled" })</td>
@@ -83,7 +83,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.PlanEnOrganiserenWerk)
+            Plannen en organiseren werk
         </td>
         <td>@Html.RadioButtonFor(model => model.PlanEnOrganiserenWerk, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.PlanEnOrganiserenWerk, 2, new { disabled = "disabled" })</td>
@@ -96,7 +96,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.TheoretischInzicht)
+            Theoretisch inzicht
         </td>
         <td>@Html.RadioButtonFor(model => model.TheoretischInzicht, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.TheoretischInzicht, 2, new { disabled = "disabled" })</td>
@@ -109,7 +109,7 @@
     </tr>
     <tr>
         <td>
-            @Html.DisplayNameFor(model => model.TechnischInzicht)
+            Technisch inzicht
         </td>
         <td>@Html.RadioButtonFor(model => model.TechnischInzicht, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.TechnischInzicht, 2, new { disabled = "disabled" })</td>
@@ -122,7 +122,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.KwalGeleverdWerk)
+            Kwaliteit geleverd werk
         </td>
         <td>@Html.RadioButtonFor(model => model.KwalGeleverdWerk, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.KwalGeleverdWerk, 2, new { disabled = "disabled" })</td>
@@ -135,7 +135,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.RapportWerk)
+            Rapporteren werk
         </td>
         <td>@Html.RadioButtonFor(model => model.RapportWerk, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.RapportWerk, 2, new { disabled = "disabled" })</td>
@@ -148,7 +148,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.HoudtBedrRegels)
+            Houding met betrekking tot bedrijfs regels
         </td>
         <td>@Html.RadioButtonFor(model => model.HoudtBedrRegels, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.HoudtBedrRegels, 2, new { disabled = "disabled" })</td>
@@ -161,7 +161,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.HoudtARBORegels)
+            Houding met betrekking tot ARBO regels
         </td>
         <td>@Html.RadioButtonFor(model => model.HoudtARBORegels, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.HoudtARBORegels, 2, new { disabled = "disabled" })</td>
@@ -174,7 +174,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.WerkTempo)
+               Werktempo
         </td>
         <td>@Html.RadioButtonFor(model => model.WerkTempo, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.WerkTempo, 2, new { disabled = "disabled" })</td>
@@ -187,7 +187,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.BeoordelingTechAspect)
+            Technische aspecten
         </td>
         <td>@Html.RadioButtonFor(model => model.BeoordelingTechAspect, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.BeoordelingTechAspect, 2, new { disabled = "disabled" })</td>
@@ -200,7 +200,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.VerloopEersteContact)
+            Verloop eerste contact
         </td>
         <td>@Html.RadioButtonFor(model => model.VerloopEersteContact, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.VerloopEersteContact, 2, new { disabled = "disabled" })</td>
@@ -213,7 +213,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.HoudingTAVCollegas)
+            Houding ten aanzichte van collegas
         </td>
         <td>@Html.RadioButtonFor(model => model.HoudingTAVCollegas, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.HoudingTAVCollegas, 2, new { disabled = "disabled" })</td>
@@ -226,7 +226,8 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.HoudingTAVLeiding)
+            Houding ten aanzichte van leidinggevende
+
         </td>
         <td>@Html.RadioButtonFor(model => model.HoudingTAVLeiding, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.HoudingTAVLeiding, 2, new { disabled = "disabled" })</td>
@@ -239,7 +240,8 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.HoudingTAVDerden)
+            Houding ten aanzichte van derden
+
         </td>
         <td>@Html.RadioButtonFor(model => model.HoudingTAVDerden, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.HoudingTAVDerden, 2, new { disabled = "disabled" })</td>
@@ -252,7 +254,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.OmgaanKritiek)
+            Omgaan met kritiek
         </td>
         <td>@Html.RadioButtonFor(model => model.OmgaanKritiek, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.OmgaanKritiek, 2, new { disabled = "disabled" })</td>
@@ -265,7 +267,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.OpTijd)
+            Komt op tijd
         </td>
         <td>@Html.RadioButtonFor(model => model.OpTijd, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.OpTijd, 2, new { disabled = "disabled" })</td>
@@ -278,7 +280,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.ToontInitiatief)
+            Toont initiatief
         </td>
         <td>@Html.RadioButtonFor(model => model.ToontInitiatief, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.ToontInitiatief, 2, new { disabled = "disabled" })</td>
@@ -291,7 +293,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.Inzet)
+            Inzet
         </td>
         <td>@Html.RadioButtonFor(model => model.Inzet, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.Inzet, 2, new { disabled = "disabled" })</td>
@@ -304,7 +306,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.ToontBelangstellingVak)
+            Toont belangstelling voor het vak
         </td>
         <td>@Html.RadioButtonFor(model => model.ToontBelangstellingVak, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.ToontBelangstellingVak, 2, new { disabled = "disabled" })</td>
@@ -317,7 +319,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.GrenzenAangeven)
+            Weet grenzen aan te geven
         </td>
         <td>@Html.RadioButtonFor(model => model.GrenzenAangeven, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.GrenzenAangeven, 2, new { disabled = "disabled" })</td>
@@ -330,7 +332,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.KomtAfsprakenNa)
+            Komt afspraken na
         </td>
         <td>@Html.RadioButtonFor(model => model.KomtAfsprakenNa, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.KomtAfsprakenNa, 2, new { disabled = "disabled" })</td>
@@ -343,7 +345,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.ZelfstandigWerken)
+            Zelfstandig werken
         </td>
         <td>@Html.RadioButtonFor(model => model.ZelfstandigWerken, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.ZelfstandigWerken, 2, new { disabled = "disabled" })</td>
@@ -356,7 +358,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.Gemotiveerd)
+            Is gemotiveerd
         </td>
         <td>@Html.RadioButtonFor(model => model.Gemotiveerd, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.Gemotiveerd, 2, new { disabled = "disabled" })</td>
@@ -369,7 +371,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.HoudingsAspecten)
+            Houdings aspecten
         </td>
         <td>@Html.RadioButtonFor(model => model.HoudingsAspecten, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.HoudingsAspecten, 2, new { disabled = "disabled" })</td>
@@ -382,7 +384,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.Verslag)
+            Verslag
         </td>
         <td>@Html.RadioButtonFor(model => model.Verslag, 1, new { disabled = "disabled" })</td>
         <td>@Html.RadioButtonFor(model => model.Verslag, 2, new { disabled = "disabled" })</td>
@@ -395,7 +397,7 @@
     </tr>
     <tr>
         <td >
-            @Html.DisplayNameFor(model => model.EindBeoordeling)
+            Eind beoordeling
         </td>
         <td  >
             @Html.DisplayFor(model => model.EindBeoordeling)
