--- a/PVB Stage Applicatie/Views/GespreksFormulier/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/GespreksFormulier/Edit.cshtml
@@ -23,7 +23,7 @@
             @Html.LabelFor(model => model.Gesprek)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Gesprek)
+            @Html.TextAreaFor(model => model.Gesprek)
             @Html.ValidationMessageFor(model => model.Gesprek)
         </div>
 
